    * The file contents of dpkg .deb files can now be extracted by
      r.addArchive() (CNY-2926)
    * Conary now provides python: dependencies during incompatible
      cross-builds. (CNY-2914)
    * The Transient policy now follows packaging instead of walking
      the filesystem, avoiding inconsistencies caused by side effects
      of other policies. (CNY-2939)

  o Internal Changes:
    * Moved findOrdering boolean into DependencyCheck object
    * Cleaned up graph code during dependency checks to remove redundant
      calls in some (relatively obscure) cases
    * Reworked MPI to long conversion to work on four bytes at a time
    * TroveChangeSet objects in changesets are now sorted by the
      name/version/flavor of the new trove
    * Thawing ReferencedTroveSet objects now looks up values with a single
      slice instead of one index at a time for a performance improvement
    * Check the dependencyCache when thawing Dependency objects before
      thawing them instead of after (helping performance as well as memory
      usage)
    * Use a WeakValueDictionary for the dependencyCache instead of an
      ObjectCache

  o Bug Fixes:
    * Recipes containing a mirror:// style source can be properly committed
      to the repository. (CNY-2848)

Changes in 2.0.22:
  o Build Changes:
    * The loadSuperClass and loadInstalled methods now returns the loaded
      recipe class so that the loaded class can be referenced anonymously.
      This makes factories more flexible. (CNY-2900)
    * The addPatch source action now takes a "filter" keyword argument
      that provides a command line that can modify the patch; for
      example, by calling the filterdiff program. (CNY-2874)
    * Builds previously failed in some circumstances when Conary
      discovered no need only for :runtime components listed in
      buildRequires.  This has been fixed, and error reporting
      improved for similar classes of bugs in the future. (CNY-2904)

  o Client Changes: